--- a/figure-solver.cabal
+++ b/figure-solver.cabal
@@ -6,7 +6,7 @@ tested-with:   GHC ==9.0.2
 common lang
   build-depends:
     , base    ==4.15.1.0
-    , relude  ^>=1.0.0.1
+    , relude  ^>=1.1.0.0
 
   default-language:   Haskell2010
   default-extensions:
@@ -76,5 +76,8 @@ executable figure-solver
   -- cabal-fmt: expand cmd/figure-solver -Main
   other-modules:
   build-depends:
+    , aeson                 ^>=2.1.0.0
     , megaparsec            ^>=9.2.1
     , optparse-applicative  ^>=0.17.0.0
+    , req                   ^>=3.13.0
+    , tagsoup               ^>=0.14.8
